Performance and code quality improvements.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,6 +1,6 @@
 name: day_night_switcher_example
 description: Demonstrates how to use the day / night switcher widget.
-version: 1.0.0+1
+publish_to: 'none'
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
